--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 category_encoders==2.8.1
 click==8.2.0
+cloudpickle==3.1.1
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
