--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.9.0
 category_encoders==2.8.1
 click==8.2.0
 cloudpickle==3.1.1
+dnspython==2.7.0
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
@@ -13,6 +14,7 @@ pandas==2.2.3
 patsy==1.0.1
 pydantic==2.11.4
 pydantic_core==2.33.2
+pymongo==4.13.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 scikit-learn==1.6.1
